--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="hello_world">Hola mundo desde archivo String</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Strings from calculator -->
+    <string name="number_1">number1</string>
+    <string name="number_2">number2</string>
+    <string name="buttonCalcular">Calcular</string>
+    <string name="buttom1">Sumar</string>
+    <string name="buttom2">Restar</string>
+    <string name="buttom3">Multiplicar</string>
+    <string name="buttom4">Dividir</string>
+
 </resources>
